--- a/html lesson2.html
+++ b/html lesson2.html
@@ -11,22 +11,22 @@
 		
 			<div>
 				SECTION 1
-				<img src = "avi.png" height = "200" width = "200">
+				<img src = "" height = "200" width = "200">
 			</div>
 			
 			<div>
 				SECTION 2
-				<img src = "avi.png" height = "200" width = "200">
+				<img src = "" height = "200" width = "200">
 			</div>
 			
 			<div>
 				SECTION 3
-				<img src = "youtube logo.png" height = "200" width = "200">
+				<img src = "" height = "200" width = "200">
 			</div>
 
 			<div>
 				SECTION 4
-				<img src = "everyday comics logo.png" height = "200" width = "200">
+				<img src = "" height = "200" width = "200">
 			</div>
 		
 		</body>
