--- a/html lesson2.html
+++ b/html lesson2.html
@@ -11,21 +11,26 @@
 		
 			<div>
 				SECTION 1
+				<!--Fill in the blank quotation marks with an image you choose from google-->
+				<!-- When you find a picture you like, play around with sizes -->
 				<img src = "" height = "200" width = "200">
 			</div>
 			
 			<div>
 				SECTION 2
+				<!--Fill in the blank quotation marks with an image you choose from google-->
 				<img src = "" height = "200" width = "200">
 			</div>
 			
 			<div>
 				SECTION 3
+				<!--Fill in the blank quotation marks with an image you choose from google-->				
 				<img src = "" height = "200" width = "200">
 			</div>
 
 			<div>
 				SECTION 4
+				<!--Fill in the blank quotation marks with an image you choose from google-->				
 				<img src = "" height = "200" width = "200">
 			</div>
 		
