--- a/html lesson4.html
+++ b/html lesson4.html
@@ -13,6 +13,8 @@
 		
 			<div id = "section1">
 				SECTION 1
+				<!--REPLACE ALL THE PICTURES WITH YOUR OWN-->
+				<!--======================================-->
 				<img src = "avi.png" height = "200" width = "200">
 			</div>
 			
@@ -35,5 +37,4 @@
 			</div>
 		
 		</body>
-		
 	</html>
